Fix for BUG#13037: undefined variable in IF cause erroneous error-message.